Fix .searchable-list vertical-align
- stop jumping when going in and out of edit mode

--- a/src/css/blocks/_searchable-list.css
+++ b/src/css/blocks/_searchable-list.css
@@ -5,6 +5,7 @@
   border: 1px solid var(--silver);
   text-align: left;
   padding: 0 0.25rem;
+  vertical-align: middle;
   @media (--hd) {
     min-width: 200px;
   }
