--- a/src/style.css
+++ b/src/style.css
@@ -1938,6 +1938,7 @@ a:active, a:hover{
   border:1px solid #d9d9dc;
   text-align:left;
   padding:0 0.25rem;
+  vertical-align:middle;
 }
 @media (min-width: 1200px){
   .searchable-list{
